@@ -1,3 +1,6 @@
+NEXT (TBD)
+------------------
+- make `rio_tiler.io.landsat8.tile` return Uint16 data and not float32
 
 2.0a4 (2020-04-08)
 ------------------
